--- a/st-treeoflife/manifest.json
+++ b/st-treeoflife/manifest.json
@@ -1,19 +1,14 @@
 {
   "name": "Tree of Life Member Login",
-  "short_name": "Login",
+  "short_name": "Tree of Life Login",
   "description": "Login page for Tree of Life Centre member",
   "start_url": "./st-treeoflife/index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#317EFB",
+  "background_color": "#f8f4f1",
+  "theme_color": "#f8f4f1",
   "icons": [
     {
-      "src": "icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512x512.png",
+      "src": "icon-bear.png", // "icon-tree-1.png", "icon-tree-2.png"
       "sizes": "512x512",
       "type": "image/png"
     }
