--- a/st-treeoflife/manifest.json
+++ b/st-treeoflife/manifest.json
@@ -8,9 +8,9 @@
   "theme_color": "#f8f4f1",
   "icons": [
     {
-      "src": "icon-bear.png",
+      "src": "icon-bear.jpeg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ],
   "orientation": "portrait",
